# ESMFoldApp

./: .gitignore  ALPHA_RELEASE_NOTES.md  CLAUDE.md  README.md  build_dev_container.sh
.github/workflows/: container-test.yml
app_specs/: ESMFold.json
container/: CUDA12_MIGRATION.md  DEPENDENCY_NOTES.md  DOCUMENTATION_STATUS.md  Dockerfile  Dockerfile.cpu  ESMFoldApp.def  GPU_HANDOFF.md  GPU_HANDOFF_APPTAINER.md  PROGRESS.md  README.md  STATUS.md  TESTING_STRATEGY.md  TEST_RESULTS.md  build.sh  build_unified.sh  bvbrc_config.yaml  esmfold-patric.dockerfile  esmfold.def  esmfold.dockerfile  esmfold_base.def  esmfold_base_2.0.def  esmfold_base_2.1.def  esmfold_h100.def  esmfold_h100_fixed.def  esmfold_pytorch.def  extract_minimal_runtime.sh  issue_5_update.md  issue_h100_compatibility.md  lambda13_quickstart.sh  local_test.sh  quick_test.sh  test-patric-integration.sh  test_minimal.fasta  test_pytorch.py  test_stage1_syntax.sh  testing_strategy.md
container/apptainer/: ESMFoldApp.def  esmfold-base.def  esmfold-bvbrc.def
container/archive/: GPU_HANDOFF.md  SESSION_SNAPSHOT_20250908.md  STATUS.md
cwl/: esmfold.cwl
docs/: BENCHMARKS.md  Phase2.md  SOP_SERVICE_DEVELOPMENT.md
esm_hf/: .gitignore  BUILD.md  Dockerfile  INSTALL.md  README.md  __init__.py  esmfold_hf.def  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py
esm_hf/scripts/: __init__.py  esmfold_hf.py  hf_fold.py
esm_hf/tests/: conftest.py  test_cli.py  test_convert.py  test_fasta.py
lib/: ESMFoldWrapper.py
performance_results/: performance_20250917_120404.csv  performance_20250917_123601.csv
reports/: QUICK-REFERENCE.md  critical-review-docker-implementation.md  dockerfile-comparison.md  recommended-dockerfile-fixes.md  review-summary-executive.md  work-250904.esmfold.md  work-250908.esmfold-h100.md  work-250918.esmfold-container.md
scripts/: esm-fold-wrapper  esmfold  performance_test.sh
service-scripts/: App-ESMFold.pl
test/: integration_test.sh  test_service.sh
test_data/: README.md  integration_test.fasta  single_protein.fasta  test_100aa.fasta  test_200aa.fasta  test_400aa.fasta  test_50aa.fasta  test_proteins.fasta
tests/: test_service.sh
(+19 files in other folders)
